--- a/bicepconfig.json
+++ b/bicepconfig.json
@@ -3,7 +3,6 @@
 		"extensibility": true
 	},
 	"extensions": {
-		"radius": "br:biceptypes.azurecr.io/radius:0.40",
-		"aws": "br:biceptypes.azurecr.io/aws:0.40"
+		"radius": "br:biceptypes.azurecr.io/radius:0.40"
 	}
 }
